# DoroPet_V3

./: .gitignore  README.en.md  README.md  README_EN.md
opendoro/: .gitignore  ai_studio_code.py  clean_pycache.bat  install_env.bat  main.py  requirements.txt  start_app.bat  start_app_background.bat
opendoro/config/: galgame_font.json  log_font.json
opendoro/data/: cache.db  chat.db  config.db  personas.db  pet_status.db
opendoro/live2dpy/src/: CMakeLists.txt  CMakePresets.json  cpplint.py
opendoro/live2dpy/src/cmake/: CubismSdk.cmake  boost.cmake  glew.cmake  python3.cmake
opendoro/live2dpy/src/include/: Model.h  Register.h  exports.h
opendoro/live2dpy/src/scripts/: compile.py  replace.py  write.py
opendoro/live2dpy/src/src/: wrapper.cpp
opendoro/live2dpy/src/src/LApp/: LAppDefine.hpp  LAppModel.cpp  LAppModel.hpp  LAppPal.cpp  LAppSprite.hpp  LAppTextureManager.hpp  LAppView.cpp  LAppView.hpp
opendoro/live2dpy/src/whls/: pylive2d-1.3-cp312-cp312-win_amd64.whl
opendoro/log/: log_2026-02-27_16-48-58.txt  log_2026-02-27_16-56-58.txt  log_2026-02-27_17-04-53.txt  log_2026-02-27_17-18-20.txt  log_2026-02-27_17-35-19.txt  log_2026-02-27_17-38-28.txt  log_2026-02-27_17-41-19.txt  log_2026-02-27_17-41-39.txt  log_2026-02-27_20-03-01.txt  log_2026-02-27_20-31-01.txt  log_2026-02-27_20-31-58.txt  log_2026-02-27_20-55-35.txt  log_2026-02-28_14-02-45.txt  log_2026-02-28_14-04-01.txt  log_2026-02-28_14-05-28.txt  log_2026-02-28_14-09-54.txt  log_2026-02-28_14-26-46.txt  log_2026-02-28_14-30-44.txt  log_2026-02-28_14-37-01.txt  log_2026-02-28_14-44-07.txt  log_2026-02-28_15-20-55.txt  log_2026-02-28_15-32-19.txt
opendoro/md/: README.md  README_EN.md  chat_enhancement_design.md  doro养成.md  galgame_design.md
opendoro/models/Doro/: Doro.cdi3.json  Doro.moc3  Doro.model3.json  Doro.physics3.json  Doro.vtube.json
opendoro/models/魔女/: 魔女.model3.json
opendoro/plugin/DemoDirPlugin/: game_2048.py  main.py
opendoro/plugin/calculation/: __init__.py  main.py
opendoro/plugin/color_button/: main.py
opendoro/plugin/ludo/: __init__.py  game_ludo.py  main.py
opendoro/plugin/memo/: __init__.py  main.py  memo_data.json
opendoro/runtime/Scripts/: sherpa-onnx-c-api.lib  sherpa-onnx-cxx-api.lib
opendoro/src/: live2dview.py  resource_utils.py  splash_screen.py
opendoro/src/agent/: __init__.py  doropet_agent.py
opendoro/src/core/: agent_tools.py  app_theme.py  cache_manager.py  cookie_manager.py  database.py  dependency_checker.py  downloader.py  font_scale_utils.py  image_cache_manager.py  live2d_model_manager.py  logger.py  memory_manager.py  message_parser.py  mouse_chaser.py  music_service.py  orange_manager.py  path_manager.py  pet_attribute.py  pet_attributes_manager.py  pet_constants.py  pet_fun_manager.py  pet_quotes_manager.py  quick_chat_dependencies.py  quick_chat_errors.py  quick_chat_service.py  quick_chat_state.py  quick_chat_tools.py  random_wanderer.py  shortcut_utils.py  skill_manager.py  startup_update_checker.py  state_manager.py  stream_processor.py  tts.py  version_manager.py  voice.py
opendoro/src/provider/: __init__.py  entities.py  manager.py  provider.py  register.py
opendoro/src/services/: audio_spectrum_analyzer.py  extended_music_service.py  global_music_player.py  llm_service.py  music_service.py
opendoro/src/ui/: chat_ui.py  config_ui.py  live2d_config_ui.py  log_ui.py  main_window.py  model_selector_dialog.py  music_ui.py  pet_status_interface.py  pet_status_overlay.py  plugin_ui.py  prompt_ui.py  quick_chat_window.py  screenshot_tool.py  settings_ui.py  skills_ui.py  title_bar.py  update_ui.py  voice_config_ui.py
opendoro/src/utils/: lyric_parser.py
opendoro/themes/: dark.qss  light.qss
opendoro/themes/themes/: dark.qss  (+1 more)
opendoro/tools/: download_model.py  download_with_fallback.ps1
(+182 files in other folders)
